# inspiration-box

./: .gitignore  README.md  package-lock.json  package.json  preview.html  run-dev.bat
scripts/: publish-release.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: details.html  details.js  glass.js  index.html  main.js  sticky.html  sticky.js  styles.css
